# mailiner-rs

./: .gitignore  .gitmodules  Cargo.toml  Dioxus.toml  Makefile  deny.toml
.cursor/rules/: project.mdc
assets/css/: tailwind.css
crates/mailiner-app/: Cargo.toml  Dioxus.toml  build.rs
crates/mailiner-app/assets/: main.css
crates/mailiner-app/src/: account.rs  components.rs  context.rs  core_event.rs  mailbox.rs  main.rs  message.rs  websocket_stream.rs
crates/mailiner-app/src/components/: emailnavigation.rs  messagelist.rs  messageview.rs  sidebar.rs  virtual_scroll.rs
crates/mailiner-app/src/components/emailnavigation/: mailboxtreeview.rs  messagelist.rs  messagelist_virtual.rs  navigationheader.rs
crates/mailiner-core/: Cargo.toml
crates/mailiner-core/src/: connector.rs  error.rs  ids.rs  lib.rs  models.rs  storage.rs
crates/mailiner-imap-connector/: Cargo.toml
crates/mailiner-imap-connector/src/: bodystructure.rs  lib.rs
css/: .gitignore  Cargo.toml  build.rs  package.json  tailwind.config.js  tailwind.input.css
css/src/: lib.rs
mailiner-core/: Cargo.toml
mailiner-core/src/: accountwizard.rs  hooks.rs  imap_account_manager.rs  imap_connector.rs  imap_stream.rs  lib.rs  mailbox.rs  settings.rs  ssl_stream.rs  transport_stream.rs  ws_connector.rs
openssl/: Cargo.toml  build.rs
openssl-bindings/: Cargo.toml  build.rs
openssl-bindings/src/: lib.rs
openssl/src/: lib.rs  openssl.h
src/: email_app.rs  lib.rs  main.rs
src/components/: button.rs  checkbox.rs  dialog.rs  input.rs  mod.rs  radio.rs  sidebar.rs  toolbar.rs
src/components/button/: button.rs  gallery.rs
src/components/checkbox/: checkbox.rs  gallery.rs
src/components/dialog/: dialog.rs  gallery.rs
src/components/input/: gallery.rs  input.rs
src/components/radio/: gallery.rs  radio.rs
src/components/sidebar/: gallery.rs  sidebar.rs
src/components/toolbar/: design_system.rs  toolbar.rs
src/components/toolbar/design_system/: toolbar_design_system.rs  toolbar_item_states.rs  toolbar_props.rs
src/corelib/: hooks.rs  imap_connector.rs  mod.rs  security.rs  settings.rs  ssl_stream.rs  ws_connector.rs  ws_stream.rs
src/kernel/: backend.rs  cache.rs  mod.rs  model.rs  repository.rs  service.rs
src/kernel/backend/: mock.rs
src/kernel/model/: account.rs  folder.rs  message.rs
src/kernel/repository/: account.rs  folder.rs  message.rs
src/layouts/: mail_layout.rs  main_layout.rs  mod.rs
src/mailiner_core/: mail_controller.rs  mod.rs  model.rs
src/pages/: accountwizard.rs  mod.rs
src/pages/mail/: mail_view.rs  message_detail.rs  message_list.rs  mod.rs
src/pages/mainview/: accountsview.rs  footer.rs  header.rs  messagelist.rs  messageview.rs  mod.rs
src/pages/mainview/accountsview/: accounttab.rs  mod.rs
src/utils/: mod.rs  unique_ptr.rs
test-utils/ws-echo-server/: Cargo.toml
test-utils/ws-echo-server/src/: main.rs
tests/: browser.rs  imap_stream.rs  transport_stream.rs  web.rs  web_local_storage.rs  websocket.rs
tests/certs/: ca-cert.crt  ca-cert.key  ca-cert.srl  cert_auth_password  domain-bundle.pem  domain.crt  domain.csr  domain.key  make_certs.sh
tests/data/: certificate_bundle.der  certificate_bundle.pem  csr.pem  private_key.pem  self_signed_certificate.pem
