[package]
name = "mailiner-rs"
version = "0.1.0"
authors = ["Daniel Vrátil <me@dvratil.cz>"]
edition = "2021"
publish = false

[workspace]
members = [
    "mailiner-core",
    "test-utils/ws-echo-server",
    "css",
    ".", 
]

[workspace.dependencies]
anyhow = "1.0"
bytes = "1.7"
chrono = { version = "0.4", features = ["serde"] }
dioxus = { version = "0.6", features = ["router"] }
dioxus-logger = "0.6"
dioxus-daisyui = "0.8"
dioxus-free-icons = { version = "0.9", features = ["lucide"] }
dioxus-tailwindcss = "0.8"
futures = "0.3"
futures-core = "0.3"
futures-sink = "0.3"
futures-util = "0.3"
getrandom = { version = "0.2", features = ["js"] }
js-sys = "0.3"
tokio = "1.40"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = "0.3"


[features]
build-classes = [
    "dioxus-daisyui/build-classes",
]

[dependencies]
mailiner-css = { path = "css" }
mailiner-core = { path = "mailiner-core" }
chrono = { workspace = true }
console_error_panic_hook = "0.1"
dioxus = { workspace = true, features = ["web", "router"] }
dioxus-daisyui = { workspace = true }
dioxus-free-icons = { workspace = true }
dioxus-tailwindcss = { workspace = true }
futures = { workspace = true }
futures-core = { workspace = true }
futures-sink = { workspace = true }
futures-util = { workspace = true }
getrandom = { workspace = true }
js-sys = { workspace = true }
manganis = "0.2"
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { version = "1.10", features = ["v4", "js"] }
wasm-bindgen = { workspace = true }
wasm-bindgen-futures = { workspace = true }
web-sys = { workspace = true }
tracing = "0.1"
rustls-pemfile = "2.1"
tokio = { workspace = true, features = ["macros"] }

[build-dependencies]
dioxus-daisyui = { workspace = true }

[dev-dependencies]
dioxus-logger = { workspace = true }
rustls = { version = "0.23", default-features=false, features = ["ring"] }
wasm-bindgen-test = "0.3"

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
