[workspace]
resolver = "2"
members = [
    "crates/mailiner-app",
    "crates/mailiner-core",
    "crates/mailiner-imap-connector"
]

[workspace.dependencies]
tokio = { version = "1.47", default-features = false, features = [ "rt", "time" ] }

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
