[package]
name = "mailiner-core"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
anyhow = "1.0"
bytes = "1.7"
dioxus = "0.5"
dioxus-logger = "0.5"
futures = "0.3"
futures-core = "0.3"
futures-sink = "0.3"
futures-util = "0.3"
gloo-storage = "0.3"
js-sys = "0.3"
ring = { version = "0.17", features = ["wasm32_unknown_unknown_js"] }
rustls = { version = "0.23", default-features = false, features = ["std", "tls12", "ring"] }
rustls-pki-types = { version = "1.8", features = ["web"] }
serde = "1.0"
serde_json = "1.0"
tracing = "0.1.40"
uuid = { version = "1.10", features = ["v4"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = ["BinaryType", "Blob", "ErrorEvent", "MessageEvent", "WebSocket"] }

[target.'cfg(unix)'.dependencies]
tokio = { version = "1.39.2", features = ["macros", "net", "rt", "rt-multi-thread"] }

[dev-dependencies]
wasm-bindgen-test = "0.3"
openssl = "0.10"


