[package]
name = "mailiner-core"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
anyhow = "1.0"
async-compat = "0.2.4"
async_io_stream = "0.3.3"
bytes = "1.7"
dioxus = "0.5"
dioxus-logger = "0.5"
futures = "0.3"
futures-core = "0.3"
futures-rustls = { version = "0.26.0", default-features=false, features = ["ring", "tls12"] }
futures-sink = "0.3"
futures-util = "0.3"
getrandom = { version = "0.2.15", features = ["js"] }
gloo-storage = "0.3"
imap-codec = "1.0.0"
imap-next = { version = "0.2.0", default-features = false }
imap-types = { version = "2.0.0-alpha", features = ["tag_generator"] }
js-sys = "0.3"
ring = { version = "0.17", features = ["wasm32_unknown_unknown_js"] }
rustls = { version = "0.23", default-features = false, features = ["std", "tls12", "ring"] }
rustls-pki-types = { version = "1.8", features = ["web"] }
serde = "1.0"
serde_json = "1.0"
thiserror = "1.0.63"
tokio = { version = "1.39.2", features = ["io-util"] }
tracing = "0.1.40"
uuid = { version = "1.10", features = ["v4"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = ["BinaryType", "Blob", "ErrorEvent", "MessageEvent", "WebSocket"] }
ws_stream_wasm = "0.7.4"

[target.'cfg(unix)'.dependencies]
tokio = { version = "1.39.2", features = ["macros", "net", "rt", "rt-multi-thread"] }

[dev-dependencies]
wasm-bindgen-test = "0.3"
openssl = "0.10"
tokio-test = "0.4.4"


