[package]
name = "mailiner-app"
version = "0.1.0"
authors = ["Daniel Vrátil <me@dvratil.cz>"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { version = "0.6", features = ["router"] }
dioxus-heroicons = "0.4"
futures-util = "0.3"
uuid = { version = "1.18", features = ["v4", "js"] }
mailiner-core = { path = "../mailiner-core" }
mailiner-imap-connector = { path = "../mailiner-imap-connector" }
js-sys = "0.3"
web-sys = { version = "0.3", features = ["BinaryType", "MessageEvent", "WebSocket"] }
tokio = { workspace = true }

[build-dependencies]
dotenv = "0.15"

[features]
default = ["web"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]
