[package]
name = "mailiner-imap-connector"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
async-imap = { version = "0.10", default-features = false, features = ["runtime-tokio"] }
async-native-tls = { version = "0.5", default-features = false, features = ["runtime-tokio"] }
tokio = { version = "1.44", features = ["full"] }
async-trait = "0.1"
chrono = "0.4"
thiserror = "2.0"
futures = "0.3"
imap-proto = "0.16"
mail-parser = "0.10"
mailiner-core = { path = "../mailiner-core" } 