[package]
name = "mailiner-imap-connector"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
async-imap = { git = "https://github.com/mailiner-net/async-imap", branch = "main", default-features = false, features = ["runtime-tokio"] }
tokio = { workspace = true }
tokio-rustls = { version = "0.26", default-features = false, features = ["tls12"] }
rustls = { version = "0.23", default-features = false, features = [ "tls12", "std" ] }
rustls-pki-types = { version = "1.12", features = [ "web" ] }
async-trait = "0.1"
chrono = "0.4"
thiserror = "2.0"
futures = "0.3"
imap-proto = "0.16"
mail-parser = "0.10"
mailiner-core = { path = "../mailiner-core" } 
uuid = { version = "1.16", features = ["js"] }
webpki-roots = "0.26"